--- a/index.html
+++ b/index.html
@@ -19,6 +19,79 @@
         </ul>
     </div>
     </nav>
+    <nav id="hamburger-nav">
+        <div class="logo">SHAKEER ISLAM</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+              </div>
+        </div>    
+    </nav>  
+    <section id="profile">
+            <div class="section__pic-container">
+              <img src="./assets/me my self.jpg" alt="SHAKEER ISLAM profile picture"/>
+            </div>
+            <div class="section__text">
+                <p class="section__text__p1">Hello, I'm</p>
+                <h1 class="title">SHAKEER ISLAM</h1>
+                <p class="section__text__p2">STUDENT</p>
+                <div class="btn-container">
+                    <button
+                      class="btn btn-color-2"
+                      onclick="window.open('./assets/resume.pdf')">
+                      Download CV
+                    </button>
+                    <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                      Contact Info
+                    </button>
+                </div>
+                <div id="socials-container">
+                    <img
+                      src="./assets/linkedin.png"
+                      alt="My LinkedIn profile"
+                      class="icon"
+                      onclick="location.href='https://linkedin.com/'"/>
+                    <img
+                      src="./assets/github.png"
+                      alt="My Github profile"
+                      class="icon"
+                      onclick="location.href='https://github.com/'"
+                    />
+                  </div>
+            </div>        
+    </section>  
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+          <div class="section__pic-container">
+            <img src="./assets/about-pic.jpg"
+              alt="Profile picture"
+              class="about-pic" />
+          </div>
+          <div class="about-details-container">
+            <div class="about-containers">
+              <div class="details-container">
+                <img
+                  src="./assets/education.png"
+                  alt="Education icon"
+                  class="icon"
+                />
+                <h3>Education</h3>
+                <p>NTTF(nettur technical training foundation)<br />Dimploma in computer engineering and it infrastructure</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
