--- a/index.html
+++ b/index.html
@@ -66,12 +66,7 @@
                       onclick="location.href='https://github.com/'"
                     />
                   </div>
-            </div>  
-            <img
-            src="./assets/arrow.png"
-            alt="Arrow icon"
-            class="icon arrow"
-            onclick="location.href='./#about'"/>      
+            </div>   
     </section>  
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
@@ -103,12 +98,11 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">T E C H N I C A L    S K I L L S </h1>
+      <h1 class="title">TECHNICAL SKILLS </h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <!--<h2 class="experience-sub-title">Frontend Development</h2>-->
-            <div class="article-container">
+             <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -216,7 +210,29 @@
         class="icon arrow"
         onclick="location.href='./#projects'"/>
     </section>
-   
+    
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:islamshakir274@gmail.com">islamshakir274@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com/in/shakeer-islam-ba15b6231">LinkedIn</a></p>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
