--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     </nav>  
     <section id="profile">
             <div class="section__pic-container">
-              <img src="./assets/me my self.jpg" alt="SHAKEER ISLAM profile picture"/>
+              <img src="./assets/about-pic.png" alt="SHAKEER ISLAM profile picture"/>
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
                 <h1 class="title">SHAKEER ISLAM</h1>
-                <p class="section__text__p2">STUDENT</p>
+                <p class="section__text__p2">SOFTWARE ENGINEER</p>
                 <div class="btn-container">
                     <button
                       class="btn btn-color-2"
-                      onclick="window.open('./assets/resume.pdf')">
+                      onclick="window.open('./assets/Resume.pdf')">
                       Download CV
                     </button>
                     <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -72,11 +72,11 @@
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
         <div class="section-container">
-          <div class="section__pic-container">
-            <img src="./assets/about-pic.jpg"
+          <!--div class="section__pic-container" style="display: flex;">
+            <img src="./assets/about-pic.png"
               alt="Profile picture"
               class="about-pic" />
-          </div>
+          </div-->
           <div class="about-details-container">
             <div class="about-containers">
               <div class="details-container">
@@ -91,12 +91,9 @@
             </div>
             <div class="text-container">
               <p>
-                I am currently a trainee at Nettur Technical Training Foundation in Bangalore,
-                where I am studying Computer Engineering and IT Infrastructure.
-                I am a Self-motivated , Enthusiastic and passionate
-                fresher seeking an entry-level position where I can apply
-                my knowledge and skills towards the growth of the
-                organization. 
+                Computer Engineering student with skills in cloud computing, DevOps, and full-stack development.
+                 Proficient in Python, Java, and C++, with AWS and Cisco certifications.
+                  Strong team player with a focus on problem-solving and contributing to success
               </p>
             </div>
           </div>
@@ -227,6 +224,7 @@
       <h1 class="title">Achievements</h1>
       <br>
       <br>
+        <div class="flex_achivement">
               <img
                 src="./assets/aws-cloud-foundations.png"
                 alt="Project 1"
@@ -241,21 +239,15 @@
               <img
                 src="./assets/aws-cloud-semester-2.png"
                 alt="Project 3"
-                class="project-img"/>
-
-              <!-- 
-                <img
-                src="./assets/batch5.png"
-                alt="Project 3"
-                class="project-img"/>
-                <br>      -->          
+                class="project-img"/>   
                
                <img
                 src="./assets/arrow.png"
                 alt="Arrow icon"
                 class="icon arrow"
                 onclick="location.href='./#contact'"
-              />
+              />      
+          </div>
     </section>   
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -275,7 +267,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/shakeer-islam-ba15b6231">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/shakeer-islam-ba15b6231" target="_blank">LinkedIn</a></p>
         </div>
       </div>
     </section>
