--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         onclick="location.href='./#projects'"/>
     </section>
     <section id="projects">
-      <p class="section_text_p1">Browse My Achievements</p>
+      <p class="section_text_p1"><center>Browse My Achievements</center></p>
       <h1 class="title">Achievements</h1>
       <br>
       <br>
